# agentscope-easy

./: .gitignore  README.md  README_zh.md  pyproject.toml
.codex/long-horizon/: Documentation.md  Implement.md  Plan.md  Prompt.md  source-matrix.md
.github/workflows/: easy-lint.yml  toc.yml  unittest.yml
artifacts/: final-manifest.json
docs/: SOP.md
docs/agent/: SOP.md
docs/browser/: SOP.md
docs/evaluate/: SOP.md
docs/filesystem/: SOP.md
docs/mcp/: SOP.md
docs/memory/: SOP.md
docs/model/: SOP.md
docs/realtime/: SOP.md
docs/tool/: SOP.md
docs/tune/: SOP.md
docs/utils/: SOP.md
examples/agent_search_subagent/: e2e_direct.py  e2e_tool_mode.py
examples/filesystem_agent/: main.py
specs/015-version-deps-closeout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-client-kwargs-hardcut/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-l1-bulk-closeout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-l1-runtime-pointfixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-l1-fast-closeout-a/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-docs-example-megabatch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-agent-runtime-closeout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-reactagent-residual-closeout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-l1-fast-closeout-b/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-model-l1-fix-batch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: config_test.py  evaluation_test.py  formatter_dashscope_test.py  init_import_test.py  long_term_memory_base_test.py  mcp_client_test.py  mcp_real_runtime_validation_test.py  mcp_streamable_http_client_test.py  memory_reme_test.py  model_anthropic_test.py  model_dashscope_test.py  model_gemini_test.py  model_ollama_test.py  model_openai_test.py  model_trinity_test.py  packaging_contract_test.py  pipeline_test.py  plan_test.py  public_surface_test.py  react_agent_test.py  subagent_real_runtime_validation_test.py  tool_test.py  toolkit_test.py  tracer_test.py  tracing_converter_test.py  tracing_extractor_test.py  tracing_utils_test.py  tts_base_test.py  tts_dashscope_test.py  tts_gemini_test.py  tts_openai_test.py  tune_test.py
(+231 files in other folders)
